.tempCodeRunnerFile.txt

Tue 14 Jan 2020 10:04:56 CST
Example.java:23: error: ';' expected
      System.out.println("All numbers are different")
                                                     ^
1 error
Error: Could not find or load main class Example
Tue 14 Jan 2020 10:05:09 CST
Input first number: Input second number: Input third number: Neither all are equal or different
